--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     ]
   },
   "dependencies": {
+    "ramda": "^0.27.1",
     "react": "^16.12.0"
   },
   "devDependencies": {
+    "@types/ramda": "^0.27.45",
     "@umijs/test": "^3.0.5",
     "dumi": "^1.0.16",
     "father-build": "^1.17.2",
